[project]
name = "project1"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "instructor>=1.11.3",
    "matplotlib>=3.10.6",
    "openai>=1.108.1",
    "pandas>=2.3.2",
    "pydantic>=2.11.9",
    "seaborn>=0.13.2",
    "transformers>=4.56.2",
]
